--- a/exercisepdfs/Ch7/biblio/workshopreprints.bib
+++ b/exercisepdfs/Ch7/biblio/workshopreprints.bib
@@ -22,16 +22,16 @@
   url         = {http://dx.doi.org/10.1007/s10336-010-0583-z},
 }
 
-@ARTICLE{Borchers2006,
-  author = {Borchers, D.L. and Laake, J.L. and Southwell, C. and Paxton, C.G.M.},
-  title = {Accommodating unmodeled heterogeneity in double-observer distance
-	sampling surveys},
-  journal = {Biometrics},
-  year = {2006},
-  volume = {62},
-  pages = {372--378},
-  number = {2},
-  abstract = {Mark-recapture models applied to double-observer distance sampling
+@Article{Borchers_2005,
+  author      = {D. L. Borchers and J. L. Laake and C. Southwell and C. G. M. Paxton},
+  title       = {Accommodating unmodeled heterogeneity in double-observer distance sampling surveys},
+  journal     = {Biometrics},
+  year        = {2006},
+  volume      = {62},
+  number      = {2},
+  pages       = {372--378},
+  month       = {dec},
+  abstract    = {Mark-recapture models applied to double-observer distance sampling
 	data neglect the information on relative detectability of objects
 	contained in the distribution of observed distances. A difference
 	between the observed distribution and that predicted by the mark-recapture
@@ -42,30 +42,34 @@
 	We demonstrate its usefulness in coping with unmodeled heterogeneity
 	using data from an aerial survey of crabeater seals in the Antarctic.
 	© 2005, The International Biometric Society.},
-  address = {Australian Antarctic Division, Channel Highway, Kingston, Tasmania
-	7050, Australia},
-  comment = {http://www.seaturtle.org/PDF/Borchers_2006_Biometrics.pdf},
-  file = {:borchers et al(2006).pdf:PDF},
-  keywords = {Distance sampling, Double observer, Heterogeneity, Mark-recapture,
-	Point independence},
-  owner = {eric},
+  address     = {Australian Antarctic Division, Channel Highway, Kingston, Tasmania 7050, Australia},
+  comment     = {http://www.seaturtle.org/PDF/Borchers_2006_Biometrics.pdf},
+  doi         = {10.1111/j.1541-0420.2005.00493.x},
+  file        = {:borchers et al(2006).pdf:PDF},
+  keywords    = {Distance sampling, Double observer, Heterogeneity, Mark-recapture, Point independence},
+  owner       = {eric},
+  publisher   = {Wiley},
   subdatabase = {distance},
-  timestamp = {2006.11.05}
+  timestamp   = {2006.11.05},
+  url         = {https://doi.org/10.1111/j.1541-0420.2005.00493.x},
 }
 
-@ARTICLE{Borchers2010,
-  author = {D. L. Borchers and T. A. Marques and Th. Gunnlaugsson and P. E. Jupp},
-  title = {Estimating distance sampling detection functions when distances are
-	measured with errors},
-  journal = {Journal of Agricultural, Biological, and Environmental Statistics},
-  year = {2010},
-  volume = {15},
-  pages = {346-361},
-  doi = {10.1007/s13253-010-0021-y},
-  file = {:borchers etal (2010) Estimating distance sampling detection functions when distances are measured with errors.pdf:PDF},
-  owner = {Tiago},
+@Article{Borchers2010,
+  author      = {David Borchers and Tiago Marques and Thorvaldur Gunnlaugsson and Peter Jupp},
+  title       = {Estimating distance sampling detection functions when distances are measured with errors},
+  journal     = {Journal of Agricultural, Biological, and Environmental Statistics},
+  year        = {2010},
+  volume      = {15},
+  number      = {3},
+  pages       = {346-361},
+  month       = {mar},
+  doi         = {10.1007/s13253-010-0021-y},
+  file        = {:borchers etal (2010) Estimating distance sampling detection functions when distances are measured with errors.pdf:PDF},
+  owner       = {Tiago},
+  publisher   = {Springer Nature},
   subdatabase = {cvonline, distance, citBiom2004},
-  timestamp = {2008.06.27}
+  timestamp   = {2008.06.27},
+  url         = {https://doi.org/10.1007/s13253-010-0021-y},
 }
 
 @Article{Buckland_2005,
@@ -98,6 +102,7 @@
   owner     = {eric},
   publisher = {The Royal Society},
   timestamp = {2010.08.17},
+  url       = {https://doi.org/10.1098/rstb.2004.1589},
 }
 
 @Article{Buckland_2010,
@@ -142,10 +147,11 @@
   doi         = {10.1642/0004-8038(2006)123[345:psfsrm]2.0.co;2},
   file        = {:Buckland Auk 2006.pdf:PDF},
   owner       = {Tiago},
-  publisher   = {American Ornithologists{\textquotesingle} Union},
+  publisher   = {American Ornithologists Union},
   refid       = {15765},
   subdatabase = {distance},
   timestamp   = {2006.11.23},
+  url         = {https://doi.org/10.1642/0004-8038(2006)123%5B345:psfsrm%5D2.0.co;2},
 }
 
 @Article{Buckland_2007,
@@ -166,6 +172,7 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {cvonline, distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1111/j.1541-0420.2007.00798.x},
 }
 
 @Article{Buckland_2012,
@@ -202,6 +209,7 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1111/j.0006-341x.2000.00001.x},
 }
 
 @Article{Buckland_2009,
@@ -262,17 +270,19 @@ Tenho IMPRESSO},
   publisher   = {Institute of Mathematical Statistics},
   subdatabase = {state-space models},
   timestamp   = {2007.11.28},
+  url         = {https://doi.org/10.1214/088342306000000673},
 }
 
-@ARTICLE{Buckland2010b,
-  author = {Stephen T. Buckland and Andrew J. Plumptre and Len Thomas and Eric
-	A. Rexstad},
-  title = {Design and analysis of line transect surveys for primates},
-  journal = {International Journal of Primatology},
-  year = {2010},
-  volume = {31},
-  pages = {833-847},
-  abstract = {Line transect surveys are widely used for estimating abundance of
+@Article{Buckland2010b,
+  author    = {Stephen T. Buckland and Andrew J. Plumptre and Len Thomas and Eric A. Rexstad},
+  title     = {Design and analysis of line transect surveys for primates},
+  journal   = {International Journal of Primatology},
+  year      = {2010},
+  volume    = {31},
+  number    = {5},
+  pages     = {833-847},
+  month     = {aug},
+  abstract  = {Line transect surveys are widely used for estimating abundance of
 	primate populations. The method relies on a small number of key assumptions,
 	and if these are not met, substantial bias may occur. For a variety
 	of reasons, primate surveys often do not follow what is generally
@@ -290,12 +300,15 @@ Tenho IMPRESSO},
 	design issues, field methods, analysis, and potential alternative
 	methodologies for when standard line transect sampling cannot deliver
 	reliable abundance estimates.},
-  file = {:Buckland et al (in press)design and analysis.pdf:PDF},
-  owner = {eric},
-  timestamp = {2010.08.17}
+  doi       = {10.1007/s10764-010-9431-5},
+  file      = {:Buckland et al (in press)design and analysis.pdf:PDF},
+  owner     = {eric},
+  publisher = {Springer Nature},
+  timestamp = {2010.08.17},
+  url       = {https://doi.org/10.1007/s10764-010-9431-5},
 }
 
-@Article{Buckland_2009,
+@Article{Buckland2009,
   author      = {Stephen T. Buckland and Robin E. Russell and Brett G. Dickson and Victoria A. Saab and Donal N. Gorman and William M. Block},
   title       = {Analysing designed experiments in distance sampling},
   journal     = {Journal of Agricultural, Biological, and Environmental Statistics},
@@ -311,6 +324,7 @@ Tenho IMPRESSO},
   publisher   = {Springer Nature},
   subdatabase = {distance},
   timestamp   = {2008.12.01},
+  url         = {https://doi.org/10.1198/jabes.2009.08030},
 }
 
 @Article{Buckland2006b,
@@ -437,6 +451,7 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {distance},
   timestamp   = {2006.11.16},
+  url         = {https://doi.org/10.1111/j.1541-0420.2008.01018.x},
 }
 
 @Article{Fewster_2005,
@@ -454,6 +469,7 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1111/j.1541-0420.2005.00413_1.x},
 }
 
 @Article{Hedley_2004,
@@ -487,17 +503,19 @@ Tenho IMPRESSO},
   publisher    = {Springer Nature},
   subdatabase  = {distance},
   timestamp    = {2006.11.05},
+  url          = {https://doi.org/10.1198/1085711043578},
 }
 
-@Article{herr_seals_2009,
-  author   = {H. Herr and M. Scheidat and K. Lehnert and U. Siebert},
-  title    = {Seals at sea: modelling seal distribution in the German bight based on aerial survey data},
-  journal  = {Marine Biology},
-  year     = {2009},
-  volume   = {156},
-  number   = {5},
-  pages    = {811--820},
-  abstract = {The Wadden Sea is an important habitat for harbour seals and grey
+@Article{Herr_2009,
+  author    = {Helena Herr and M. Scheidat and K. Lehnert and U. Siebert},
+  title     = {Seals at sea: modelling seal distribution in the German bight based on aerial survey data},
+  journal   = {Marine Biology},
+  year      = {2009},
+  volume    = {156},
+  number    = {5},
+  pages     = {811--820},
+  month     = {feb},
+  abstract  = {The Wadden Sea is an important habitat for harbour seals and grey
 	seals. They regularly haul-out on sandbanks and islands along the
 	coast. Comparably little is known about the time seals spend at sea
 	and how they use the remainder of the North Sea. Yet, human activity
@@ -513,8 +531,9 @@ Tenho IMPRESSO},
 	an abundance estimate. This is the first study to use aerial survey
 	data to develop a density surface model (DSM) for a spatially explicit
 	distribution estimate of seals at sea.},
-  doi      = {10.1007/s00227-008-1105-x},
-  url      = {http://www.springerlink.com/content/b617244722843198/},
+  doi       = {10.1007/s00227-008-1105-x},
+  publisher = {Springer Nature},
+  url       = {https://10.1007/s00227-008-1105-x},
 }
 
 @ARTICLE{,
@@ -582,7 +601,7 @@ Tenho IMPRESSO},
 	to protect local populations of the species.},
   doi       = {10.1007/s00227-009-1206-1},
   publisher = {Springer Nature},
-  url       = {http://www.springerlink.com/content/2l0q4v2q70p712h8/},
+  url       = {https://doi.org/10.1007/s00227-009-1206-1},
 }
 
 @Article{Katsanevakis_2007,
@@ -617,7 +636,7 @@ Tenho IMPRESSO},
 	with a 95% confidence interval of 5,460–8,393 individuals.},
   doi       = {10.1007/s00227-007-0659-3},
   publisher = {Springer Nature},
-  url       = {http://www.springerlink.com/content/0003w8w528844535/},
+  url       = {https://doi.org/10.1007/s00227-007-0659-3},
 }
 
 @Article{Laing_2003,
@@ -636,6 +655,7 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1111/j.1365-2664.2003.00861.x},
 }
 
 @Article{Marques_2003,
@@ -654,6 +674,7 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1111/j.0006-341x.2003.00107.x},
 }
 
 @Article{Marques_2001,
@@ -672,9 +693,10 @@ Tenho IMPRESSO},
   publisher   = {Wiley},
   subdatabase = {distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1046/j.1365-2664.2001.00584.x},
 }
 
-@Article{Maretal06,
+@Article{MARQUES_2006,
   author      = {Marques, Tiago A. and Andersen, Magnus and Christensen-Dalsgaard, Signe and Belikov, Stanislav and Boltunov, Andrei and Wiig, Oystein and Buckland, Stephen T. and Aars, Jon},
   title       = {The use of global positioning systems to record distances in a helicopter line-transect survey},
   journal     = {Wildlife Society Bulletin},
@@ -691,7 +713,7 @@ Tenho IMPRESSO},
   refid       = {4831},
   subdatabase = {cvonline, distance},
   timestamp   = {2006.11.22},
-  url         = {http://www.creem.st-and.ac.uk/tiago/webpages/pdfs/Marquesetal2006.pdf},
+  url         = {https://doi.org/10.2193/0091-7648(2006)34[759:tuogps]2.0.co;2},
 }
 
 @Article{Marques_2010,
@@ -739,6 +761,7 @@ Tenho IMPRESSO},
   owner     = {eric},
   publisher = {American Ornithologists{\textquotesingle} Union},
   timestamp = {2011.08.23},
+  url       = {https://doi.org/10.1642/0004-8038(2007)124[1229:ieobdu]2.0.co;2},
 }
 
 @Article{Marques_2009,
@@ -756,7 +779,7 @@ Tenho IMPRESSO},
   owner     = {eric},
   publisher = {Acoustical Society of America ({ASA})},
   timestamp = {2012.08.15},
-  url       = {http://link.aip.org/link/?JAS/125/1982/1},
+  url       = {https://doi.org/10.1121/1.3089590},
 }
 
 @Article{Marques_2012,
@@ -796,18 +819,21 @@ Tenho IMPRESSO},
   url = {http://dx.doi.org/10.1007/s10336-010-0535-7}
 }
 
-@ARTICLE{,
-  author = {Marques, T.A. and Thomas, L. and Munger, L. and Wiggins, S. and Hildebrand,
-	J.A.},
-  title = {Estimating North Pacific right whale (\emph{{E}ubalaena japonica})
-	density using passive acoustic cue counting},
-  journal = {Endangered Species Research},
-  year = {2011},
-  volume = {13},
-  pages = {163-172},
-  file = {:Thumb\\reprints\\marques et al endang species res 2011.pdf:PDF},
-  owner = {eric},
-  timestamp = {2011.08.23}
+@Article{Marques_2011,
+  author    = {TA Marques and L Munger and L Thomas and S Wiggins and JA Hildebrand},
+  title     = {Estimating North Pacific right whale (\emph{{E}ubalaena japonica}) density using passive acoustic cue counting},
+  journal   = {Endangered Species Research},
+  year      = {2011},
+  volume    = {13},
+  number    = {3},
+  pages     = {163-172},
+  month     = {mar},
+  doi       = {10.3354/esr00325},
+  file      = {:Thumb\\reprints\\marques et al endang species res 2011.pdf:PDF},
+  owner     = {eric},
+  publisher = {Inter-Research Science Center},
+  timestamp = {2011.08.23},
+  url       = {https://doi.org/10.3354/esr00325 },
 }
 
 @Article{Miller_2013,
@@ -862,6 +888,7 @@ Tenho IMPRESSO},
   owner       = {Tiago},
   subdatabase = {distance},
   timestamp   = {2007.08.31},
+  url         = {https://doi.org/10.1007/978-0-387-78151-8_9},
 }
 
 @ARTICLE{JPE:JPE12065,
@@ -1008,6 +1035,7 @@ Tenho IMPRESSO},
   publisher   = {Springer Nature},
   subdatabase = {distance},
   timestamp   = {2009.02.18},
+  url         = {https://doi.org/10.1198/108571107x162920},
 }
 
 @Article{Strindberg_2004,
@@ -1026,6 +1054,7 @@ Tenho IMPRESSO},
   publisher   = {Springer Nature},
   subdatabase = {distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1198/108571104x15601},
 }
 
 @Article{SUMMERS_2010,
@@ -1163,6 +1192,7 @@ Tenho IMPRESSO},
   publisher   = {Elsevier {BV}},
   subdatabase = {distance},
   timestamp   = {2010.08.17},
+  url         = {https://doi.org/10.1006/jema.1996.0094},
 }
 
 @TECHREPORT{williams_model-based,
@@ -1247,8 +1277,7 @@ Tenho IMPRESSO},
   month     = {jan},
   doi       = {10.1080/01621459.2014.893884},
   publisher = {Informa {UK} Limited},
-  url       = { 
-        http://dx.doi.org/10.1080/01621459.2014.893884
+  url       = { http://dx.doi.org/10.1080/01621459.2014.893884
 },
 }
 
